# cookiecutters

./: README.md
cookiecutter-node/: cookiecutter.json
cookiecutter-node/{{cookiecutter.project_name}}/: README.md  biome.json  package-lock.json  package.json
cookiecutter-node/{{cookiecutter.project_name}}/src/: index.js
cookiecutter-python/: cookiecutter.json
cookiecutter-python/{{cookiecutter.project_name}}/: pyproject.toml
